exports[`test render actived 1`] = `
<div
  className="entity active"
  onClick={undefined}>
  <span
    className="p1">
    <div
      className="person-icon"
      style={
        Object {
          "backgroundImage": "url(/images/1.jpg)",
        }
      } />
  </span>
  <span
    className="p2">
    <span
      className="name">
      LiuXia@sansi.com
    </span>
  </span>
</div>
`;

exports[`test render normal 1`] = `
<div
  className="entity "
  onClick={undefined}>
  <span
    className="p1">
    <div
      className="person-icon"
      style={
        Object {
          "backgroundImage": "url(/images/1.jpg)",
        }
      } />
  </span>
  <span
    className="p2">
    <span
      className="name">
      LiuXia@sansi.com
    </span>
  </span>
</div>
`;
